--- a/index.html
+++ b/index.html
@@ -1,14 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>website pertama</title>
+  <title>Bisnis Saya</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial;
+      text-align: center;
+      background: #f5f5f5;
+    }
+
+    header {
+      background: #0d1b2a;
+      color: white;
+      padding: 40px;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 40px;
+    }
+
+    .section {
+      padding: 40px;
+    }
+
+    .produk img {
+      width: 250px;
+      border-radius: 10px;
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    }
+
+    .btn {
+      background: #25D366;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    footer {
+      background: #0d1b2a;
+      color: white;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-<body style="background-color:
- rgb(230, 173, 200);text-align: center;">
-    <h1 style="color: rgb(0, 44, 139);">haloo dunia</h1>
-    <p>saya berhasil buat html pertama,</p>
-    <p>yuk teman teman semangat </p>
-    <img src="saya.jpg"width="200">
-   <p><img src="mobil.jpg"width="300"></p>
+
+<body>
+
+<header>
+  <h1>BISNIS SAYA</h1>
+  <p>Produk berkualitas • Harga terbaik</p>
+</header>
+
+<div class="section produk">
+  <h2>Produk Unggulan</h2>
+  <img src="mobil.jpg">
+  <p>Deskripsi produk singkat tapi meyakinkan.</p>
+
+  <a href="https://wa.me/6285805368071">
+    <button class="btn">Pesan via WhatsApp</button>
+  </a>
+</div>
+
+<div class="section">
+  <h2>Kenapa pilih kami?</h2>
+  <p>✔ Kualitas premium<br>
+     ✔ Pengiriman cepat<br>
+     ✔ Harga bersahabat</p>
+</div>
+
+<footer>
+  © 2026 Bisnis Saya • Semua hak dilindungi
+</footer>
+
 </body>
 </html>
